pkg/plugins/policies/meshtimeout/plugin/testdata/zone_egress_sni.listener.golden.yaml
resources:
- name: self_zoneegress_dp_ze-port
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 192.168.0.10
        portValue: 10002
    enableReusePort: true
    filterChains:
    - filterChainMatch:
        serverNames:
        - sni.extsvc.default.zone-1.aws-aurora.8443
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          commonHttpProtocolOptions:
            idleTimeout: 0s
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
            - addressPrefix: ::1
              prefixLen: 128
          requestHeadersTimeout: 5s
          routeConfig:
            name: outbound:mes-http
            requestHeadersToAdd:
            - header:
                key: x-kuma-tags
                value: '&kuma.io/display-name=web&'
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: mes-http
              routes:
              - match:
                  prefix: /
                name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
                route:
                  cluster: mes-http
                  idleTimeout: 4s
                  timeout: 2s
          statPrefix: mes-http
      name: mes-http
    - filterChainMatch:
        serverNames:
        - sni.extsvc.default.zone-1.redis.6379
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: mes-tcp
          statPrefix: mes-tcp
      name: mes-tcp
    name: self_zoneegress_dp_ze-port
    trafficDirection: INBOUND
